--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
     "lucide-react": "^0.268.0",
-    "next": "13.4.18",
+    "next": "^13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +28,12 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@prisma/client": "^5.2.0",
+    "next-auth": "^4.23.1",
+    "prisma": "^5.2.0"
   }
 }
