--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="mongodb+srv://teechris:bermuda@cluster0.igmepho.mongodb.net/test"
+DATABASE_URL="mongodb+srv://teechris110:bermuda@cluster0.tdzdce0.mongodb.net/test"
+
