--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.5.0",
@@ -21,6 +25,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
     "lucide-react": "^0.268.0",
+    "nanoid": "^4.0.2",
     "next": "^13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
